--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.4",
     "express": "^4.17.1",
-    "mongoose": "^5.8.10"
+    "mongoose": "^5.8.10",
+    "nodemon": "^2.0.4",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
