--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\""
+    "start": "concurrently \"nodemon server.js\" \"cd ./client && npm start\"",
+    "build": "cd ./client && npm run build",
+    "install-client": "cd ./client %% npm install",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ./client && npm run build --prefix ./client"
+
   },
   "repository": {
     "type": "git",
